[gd_scene load_steps=4 format=3 uid="uid://fb656fvmu33t"]

[ext_resource type="Script" path="res://scripts/Summons/summoning_circle_ui.gd" id="1_0dyfa"]
[ext_resource type="Texture2D" uid="uid://nk5tfhw0xuuq" path="res://assets/summoning_circle_whole.png" id="1_m2ou4"]
[ext_resource type="FontFile" uid="uid://dq2uewwmiw1sf" path="res://assets/AmiNo8bitFont.ttf" id="3_l6ns7"]

[node name="SummoningCircleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -480.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dyfa")

[node name="CircleSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_m2ou4")

[node name="FirstItem" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = 21.0
offset_right = -18.0
offset_bottom = 36.0
color = Color(1, 1, 1, 0)

[node name="FirstItemSprite" type="Sprite2D" parent="FirstItem"]
position = Vector2(6.5, 7.5)

[node name="SecondItem" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 23.0
offset_right = 37.0
offset_bottom = 38.0
color = Color(1, 1, 1, 0)

[node name="SecondItemSprite" type="Sprite2D" parent="SecondItem"]
position = Vector2(6.5, 7.5)

[node name="ThirdItem" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = -43.0
offset_right = 8.0
offset_bottom = -28.0
color = Color(1, 1, 1, 0)

[node name="ThirdItemSprite" type="Sprite2D" parent="ThirdItem"]
position = Vector2(6.5, 7.5)

[node name="SummonButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -12.0
offset_right = 28.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_l6ns7")
text = "Summon"

[connection signal="pressed" from="SummonButton" to="." method="_on_summon_button_pressed"]
